kubernetes/ingress/deploy_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pear-test
  labels:
    app: pear
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pear
  template:
    metadata:
      labels:
        app: pear
    spec:
      hostAliases:
      - ip: "192.168.2.6"
        hostnames:
        - "foo.local"
        - "bar.local"
      - ip: "10.1.2.3"
        hostnames:
        - "foo.remote"
        - "bar.remote"
      containers:
        - name: pear-test
          image: ants/pear:v5.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6666
