kubernetes/ingress/service_v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: pear-test
spec:
  selector:
    app: pear
  type: NodePort
  ports:
  - protocol: TCP
    port: 6666
    targetPort: 6666
    nodePort: 30006
