kubernetes/ingress/ingress_v1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pear-ingress
spec:
  rules:
  - host: anli.pear-test.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: pear-test
          servicePort: 6666
