kubernetes/ingress/network_policy_v1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx
spec:
  podSelector:
    matchLabels:
      app: nginx-test
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
